<resources>
    <string name="app_name">DriverApp</string>
    <string name="et_pwd">Password</string>
    <string name="cb_rem_me">Remember Me</string>
    <string name="btn_login">Login</string>
    <string name="driver_registration">Driver Registration</string>
    <string name="driver_name">Driver Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="make_reservation">Make Reservation</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="pick_up_location">Pick-up location</string>
    <string name="drop_off_location">Drop-off location</string>
    <string name="book_now">Book Now</string>
    <string name="edit_driver_details">Edit Driver Details</string>
    <string name="save_changes">Save Changes</string>
    <string name="driver_login">Driver Login</string>
    <string name="login">Login</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="main_menu">Main Menu</string>
    <string name="title_activity_show_drivers">ShowDrivers</string>
    <string name="get_driver_details">Get Driver Details</string>
</resources>