<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_img"
    tools:context=".MainActivity">


    <View
        android:id="@+id/view"
        android:layout_width="340dp"
        android:layout_height="481dp"
        android:alpha="0.7"
        android:background="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="303dp"
        android:layout_height="302dp"
        android:layout_margin="10sp"
        android:background="@color/powder_blue"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.581">


        <Button
            android:id="@+id/button9"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginEnd="6dp"
            android:text="@string/login"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button8"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="@string/edit_profile"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button7"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="@string/register"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button6"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="@string/book_now"
            android:textStyle="bold" />
    </GridLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu"
        android:textColor="@color/purple_500"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.269" />

</androidx.constraintlayout.widget.ConstraintLayout>
